--- a/arch/arm/configs/cyanogenmod_dalikt_defconfig
+++ b/arch/arm/configs/cyanogenmod_dalikt_defconfig
@@ -35,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-v1.60"
+CONFIG_LOCALVERSION="-v1.61"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -466,7 +466,7 @@ CONFIG_KOR_MODEL_SHV_E120K=y
 # CONFIG_SAMSUNG_8X60_TABLET is not set
 # CONFIG_SAMSUNG_MEMORY_LAYOUT_ARRANGE is not set
 CONFIG_SEC_AUDIO_DEVICE=y
-CONFIG_SEC_DVFS_DUAL=y
+# CONFIG_SEC_DVFS_DUAL is not set
 # CONFIG_SEC_DVFS_DUAL_LOCK is not set
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
@@ -660,6 +660,7 @@ CONFIG_CMDLINE=""
 #
 # CPU Power Management
 #
+CONFIG_VDD_USERSPACE=y
 
 #
 # CPU Frequency scaling
@@ -708,8 +709,8 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 # CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
-CONFIG_SEC_DVFS=y
-CONFIG_SEC_DVFS_UNI=y
+# CONFIG_SEC_DVFS is not set
+# CONFIG_SEC_DVFS_UNI is not set
 CONFIG_SEC_LIMIT_LCD_OFF_CPU_MAX_FREQ=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
