--- a/arch/arm/configs/cyanogenmod_dalikt_defconfig
+++ b/arch/arm/configs/cyanogenmod_dalikt_defconfig
@@ -35,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-v1.61"
+CONFIG_LOCALVERSION="-cyanogenmod"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -181,14 +181,9 @@ CONFIG_BLK_DEV_BSG=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
-# CONFIG_IOSCHED_BFQ is not set
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIO is not set
-# CONFIG_DEFAULT_VR is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -217,34 +212,34 @@ CONFIG_ARCH_INLINE_WRITE_LOCK_IRQSAVE=y
 CONFIG_ARCH_INLINE_WRITE_UNLOCK=y
 CONFIG_ARCH_INLINE_WRITE_UNLOCK_BH=y
 CONFIG_ARCH_INLINE_WRITE_UNLOCK_IRQRESTORE=y
-CONFIG_INLINE_SPIN_TRYLOCK=y
-CONFIG_INLINE_SPIN_TRYLOCK_BH=y
-CONFIG_INLINE_SPIN_LOCK=y
-CONFIG_INLINE_SPIN_LOCK_BH=y
-CONFIG_INLINE_SPIN_LOCK_IRQ=y
-CONFIG_INLINE_SPIN_LOCK_IRQSAVE=y
-CONFIG_INLINE_SPIN_UNLOCK=y
-CONFIG_INLINE_SPIN_UNLOCK_BH=y
-CONFIG_INLINE_SPIN_UNLOCK_IRQ=y
-CONFIG_INLINE_SPIN_UNLOCK_IRQRESTORE=y
-CONFIG_INLINE_READ_TRYLOCK=y
-CONFIG_INLINE_READ_LOCK=y
-CONFIG_INLINE_READ_LOCK_BH=y
-CONFIG_INLINE_READ_LOCK_IRQ=y
-CONFIG_INLINE_READ_LOCK_IRQSAVE=y
-CONFIG_INLINE_READ_UNLOCK=y
-CONFIG_INLINE_READ_UNLOCK_BH=y
-CONFIG_INLINE_READ_UNLOCK_IRQ=y
-CONFIG_INLINE_READ_UNLOCK_IRQRESTORE=y
-CONFIG_INLINE_WRITE_TRYLOCK=y
-CONFIG_INLINE_WRITE_LOCK=y
-CONFIG_INLINE_WRITE_LOCK_BH=y
-CONFIG_INLINE_WRITE_LOCK_IRQ=y
-CONFIG_INLINE_WRITE_LOCK_IRQSAVE=y
-CONFIG_INLINE_WRITE_UNLOCK=y
-CONFIG_INLINE_WRITE_UNLOCK_BH=y
-CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
-CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE=y
+# CONFIG_INLINE_SPIN_TRYLOCK is not set
+# CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
+# CONFIG_INLINE_SPIN_LOCK is not set
+# CONFIG_INLINE_SPIN_LOCK_BH is not set
+# CONFIG_INLINE_SPIN_LOCK_IRQ is not set
+# CONFIG_INLINE_SPIN_LOCK_IRQSAVE is not set
+# CONFIG_INLINE_SPIN_UNLOCK is not set
+# CONFIG_INLINE_SPIN_UNLOCK_BH is not set
+# CONFIG_INLINE_SPIN_UNLOCK_IRQ is not set
+# CONFIG_INLINE_SPIN_UNLOCK_IRQRESTORE is not set
+# CONFIG_INLINE_READ_TRYLOCK is not set
+# CONFIG_INLINE_READ_LOCK is not set
+# CONFIG_INLINE_READ_LOCK_BH is not set
+# CONFIG_INLINE_READ_LOCK_IRQ is not set
+# CONFIG_INLINE_READ_LOCK_IRQSAVE is not set
+# CONFIG_INLINE_READ_UNLOCK is not set
+# CONFIG_INLINE_READ_UNLOCK_BH is not set
+# CONFIG_INLINE_READ_UNLOCK_IRQ is not set
+# CONFIG_INLINE_READ_UNLOCK_IRQRESTORE is not set
+# CONFIG_INLINE_WRITE_TRYLOCK is not set
+# CONFIG_INLINE_WRITE_LOCK is not set
+# CONFIG_INLINE_WRITE_LOCK_BH is not set
+# CONFIG_INLINE_WRITE_LOCK_IRQ is not set
+# CONFIG_INLINE_WRITE_LOCK_IRQSAVE is not set
+# CONFIG_INLINE_WRITE_UNLOCK is not set
+# CONFIG_INLINE_WRITE_UNLOCK_BH is not set
+# CONFIG_INLINE_WRITE_UNLOCK_IRQ is not set
+# CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
 # CONFIG_MUTEX_SPIN_ON_OWNER is not set
 CONFIG_FREEZER=y
 
@@ -416,12 +411,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
-CONFIG_CPU_VOLTAGE_TABLE=y
-CONFIG_CMDLINE_OPTIONS=y
-CONFIG_MSM_MPDEC=y
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=192000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -468,8 +458,8 @@ CONFIG_KOR_MODEL_SHV_E120K=y
 # CONFIG_SAMSUNG_8X60_TABLET is not set
 # CONFIG_SAMSUNG_MEMORY_LAYOUT_ARRANGE is not set
 CONFIG_SEC_AUDIO_DEVICE=y
-# CONFIG_SEC_DVFS_DUAL is not set
-# CONFIG_SEC_DVFS_DUAL_LOCK is not set
+CONFIG_SEC_DVFS_DUAL=y
+CONFIG_SEC_DVFS_DUAL_LOCK=y
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_PIL=y
@@ -589,9 +579,6 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
-# CONFIG_ARM_CPU_TOPOLOGY is not set
-# CONFIG_SCHED_MC is not set
-# CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
@@ -621,7 +608,7 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_SPLIT_PTLOCK_CPUS=999999
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -662,7 +649,6 @@ CONFIG_CMDLINE=""
 #
 # CPU Power Management
 #
-CONFIG_VDD_USERSPACE=y
 
 #
 # CPU Frequency scaling
@@ -673,46 +659,18 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_GALLIMAUFRY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_AGGRESSIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_LAZY=y
-CONFIG_CPU_FREQ_GOV_BADASS=y
-# CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE is not set
-# CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
-CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_GALLIMAUFRY=y
-CONFIG_CPU_FREQ_GOV_AGGRESSIVE=y
-CONFIG_CPU_FREQ_GOV_SCARY=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND_2_PHASE is not set
-CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=y
-CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
-# CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
-# CONFIG_SEC_DVFS is not set
-# CONFIG_SEC_DVFS_UNI is not set
+CONFIG_SEC_DVFS=y
+CONFIG_SEC_DVFS_UNI=y
 CONFIG_SEC_LIMIT_LCD_OFF_CPU_MAX_FREQ=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
@@ -1259,7 +1217,7 @@ CONFIG_SEC_MISC=y
 CONFIG_VIBETONZ=m
 CONFIG_PN544=y
 # CONFIG_STMPE811_ADC is not set
-CONFIG_GENERIC_BLN=y
+# CONFIG_GENERIC_BLN is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1580,7 +1538,6 @@ CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_INPUT_BMP180 is not set
-CONFIG_TOUCHKEY_HAPTIC=y
 
 #
 # Hardware I/O ports
@@ -2242,7 +2199,7 @@ CONFIG_SENSOR_S5K5BAFX=y
 CONFIG_MSM_CAMERA_FLASH=y
 # CONFIG_MSM_CAMERA_SENSOR is not set
 # CONFIG_MSM_ACTUATOR is not set
-CONFIG_FLASH_TORCH_MODE=y
+# CONFIG_FLASH_TORCH_MODE is not set
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
@@ -2412,7 +2369,7 @@ CONFIG_FB_MSM_MIPI_S6E8AA0_HD720_PT=y
 # CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PT is not set
 # CONFIG_FB_MSM_MIPI_S6E8AB0_WXGA_PT is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
-CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
+# CONFIG_FB_MSM_NO_MDP_PIPE_CTRL is not set
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
