--- a/arch/arm/configs/cyanogenmod_dalilgt_defconfig
+++ b/arch/arm/configs/cyanogenmod_dalilgt_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.49-Green-JB.4.1 Kernel Configuration
+# Linux/arm 3.0.49 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -181,14 +181,9 @@ CONFIG_BLK_DEV_BSG=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_VR=y
-# CONFIG_IOSCHED_BFQ is not set
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIO is not set
-# CONFIG_DEFAULT_VR is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -416,10 +411,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
-CONFIG_MSM_MPDEC=y
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=384000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -447,9 +439,9 @@ CONFIG_TARGET_LOCALE_KOR=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_EUR is not set
 # CONFIG_TARGET_LOCALE_HKTW is not set
-CONFIG_KOR_OPERATOR_SKT=y
+# CONFIG_KOR_OPERATOR_SKT is not set
 # CONFIG_KOR_OPERATOR_KT is not set
-# CONFIG_KOR_OPERATOR_LGU is not set
+CONFIG_KOR_OPERATOR_LGU=y
 # CONFIG_KOR_OPERATOR_OPEN is not set
 # CONFIG_KOR_MODEL_SHV_E110S is not set
 # CONFIG_KOR_MODEL_SHV_E120S is not set
@@ -467,7 +459,7 @@ CONFIG_KOR_MODEL_SHV_E120L=y
 # CONFIG_SAMSUNG_MEMORY_LAYOUT_ARRANGE is not set
 CONFIG_SEC_AUDIO_DEVICE=y
 CONFIG_SEC_DVFS_DUAL=y
-# CONFIG_SEC_DVFS_DUAL_LOCK is not set
+CONFIG_SEC_DVFS_DUAL_LOCK=y
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_PIL=y
@@ -587,7 +579,6 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
-CONFIG_ARM_CPU_TOPOLOGY=y
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
@@ -668,44 +659,16 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_GALLIMAUFRY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_AGGRESSIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE is not set
-# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_LAZY=y
-CONFIG_CPU_FREQ_GOV_BADASS=y
-# CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE is not set
-# CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
-CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_GALLIMAUFRY=y
-CONFIG_CPU_FREQ_GOV_AGGRESSIVE=y
-CONFIG_CPU_FREQ_GOV_SCARY=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND_2_PHASE is not set
-# CONFIG_CPU_FREQ_GOV_LULZACTIVEQ is not set
-# CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_SEC_DVFS=y
 CONFIG_SEC_DVFS_UNI=y
 CONFIG_SEC_LIMIT_LCD_OFF_CPU_MAX_FREQ=y
@@ -830,7 +793,7 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
-# CONFIG_IPV6_MROUTE is not set
+CONFIG_IPV6_MROUTE=y
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
 # CONFIG_NETWORK_SECMARK is not set
@@ -882,14 +845,15 @@ CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
 # CONFIG_NETFILTER_XT_TARGET_HL is not set
-# CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
+CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
-# CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
@@ -975,7 +939,7 @@ CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
 # CONFIG_IP_NF_TARGET_TTL is not set
-# CONFIG_IP_NF_RAW is not set
+CONFIG_IP_NF_RAW=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
@@ -992,15 +956,15 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_FRAG is not set
 # CONFIG_IP6_NF_MATCH_OPTS is not set
 # CONFIG_IP6_NF_MATCH_HL is not set
-# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
+CONFIG_IP6_NF_MATCH_IPV6HEADER=y
 # CONFIG_IP6_NF_MATCH_MH is not set
 # CONFIG_IP6_NF_MATCH_RT is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
 # CONFIG_IP6_NF_TARGET_LOG is not set
 CONFIG_IP6_NF_FILTER=y
-# CONFIG_IP6_NF_TARGET_REJECT is not set
+CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
-# CONFIG_IP6_NF_RAW is not set
+CONFIG_IP6_NF_RAW=y
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1591,7 +1555,7 @@ CONFIG_SERIO_LIBPS2=y
 #
 CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
-# CONFIG_VT_CONSOLE is not set
+CONFIG_VT_CONSOLE=y
 CONFIG_HW_CONSOLE=y
 # CONFIG_VT_HW_CONSOLE_BINDING is not set
 CONFIG_UNIX98_PTYS=y
@@ -2314,6 +2278,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 #
 # Frame buffer hardware drivers
 #
+CONFIG_FB_MSM_VSYNC_SYSFS=y
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_TMIO is not set
 # CONFIG_FB_UDL is not set
@@ -2343,7 +2308,7 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_MIPI_DSI=y
-# CONFIG_FB_MSM_LCDC is not set
+CONFIG_FB_MSM_LCDC=y
 # CONFIG_CMC623_P5LTE is not set
 # CONFIG_CMC624_P8LTE is not set
 CONFIG_FB_MSM_OVERLAY=y
@@ -2357,7 +2322,7 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MDDI_QUICKVX is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_PANEL is not set
+CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
@@ -2402,7 +2367,7 @@ CONFIG_FB_MSM_MIPI_S6E8AA0_HD720_PT=y
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 # CONFIG_FB_MSM_NO_MDP_PIPE_CTRL is not set
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
-# CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
+CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 # CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_P5LTE_WXGA_PANEL is not set
@@ -2538,11 +2503,15 @@ CONFIG_SND_SOC=y
 #
 # MSM SoC Audio support
 #
+CONFIG_SND_MSM_MVS_DAI_SOC=y
 CONFIG_SND_SOC_MSM8X60_PCM=y
 CONFIG_SND_SOC_MSM8X60_DAI=y
 CONFIG_SND_SOC_MSM8X60=y
+CONFIG_SND_VOIP_PCM=y
+CONFIG_SND_SOC_MSM8660_LPAIF=y
+CONFIG_SND_SOC_LPASS_PCM=y
 # CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO is not set
-# CONFIG_MSM_8x60_VOIP is not set
+CONFIG_MSM_8x60_VOIP=y
 CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_VOICE is not set
 # CONFIG_SND_SOC_QDSP6 is not set
@@ -3212,7 +3181,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_ISO8859_15 is not set
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
-# CONFIG_NLS_UTF8 is not set
+CONFIG_NLS_UTF8=y
 
 #
 # Kernel hacking
@@ -3314,7 +3283,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 CONFIG_KPROBE_EVENT=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
-# CONFIG_DYNAMIC_DEBUG is not set
+CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
